2003-09-22  John Levon  <levon@movementarian.org>

	* dae/oprofiled.c:
	* daemon/oprofiled.c: mask SIGTERM too to prevent
	the possibility of empty sample files

2003-09-21  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_output.h:
	* libpp/format_output.cpp:
	* pp/opreport.cpp: format_output::show_header no hide_header

2003-09-21  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/opreport.1.in:
	* doc/oprofile.xml:
	* libpp/format_output.h:
	* libpp/format_output.cpp:
	* pp/opreport.cpp: --global_percent must be effective for detailed
	  output too

2003-09-21  John Levon  <levon@movementarian.org>

	* pp/opreport_options.cpp: prevent --global-percent
	when appropriate

2003-09-21  John Levon  <levon@movementarian.org>

	* Makefile.am: back out broken make clean change

2003-09-21  John Levon  <levon@movementarian.org>

	* Makefile.am: make clean now removes *.html

	* internals.xml: add some outline sections

2003-09-21  John Levon  <levon@movementarian.org>

	* doc/internals.xml: provide a short overview
	and start a glossary

	* libpp/count_array.h:
	* libpp/format_output.cpp:
	* libpp/format_output.h:
	* libpp/profile.cpp:
	* libpp/profile.h:
	* libpp/profile_container.cpp:
	* libpp/profile_container.h:
	* pp/opreport.cpp: replace residual references to
	count groups with profile class concept

2003-09-21  John Levon  <levon@movementarian.org>

	* doc/Makefile.am:
	* doc/internals.xml: start an internals manual ...

2003-09-19  John Levon  <levon@movementarian.org>

	* pp/image_errors.cpp: missing include

2003-09-19  John Levon  <levon@movementarian.org>

	* libopt++/popt_options.h:
	* libopt++/popt_options.cpp: remove additional_help
	stuff, unused for some time

2003-09-18  John Levon  <levon@movementarian.org>

	* libutil++/Makefile.am:
	* libutil++/image_flags.h: move to ...

	* libpp/Makefile.am:
	* libpp/image_error.h: ... here, and rename

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: take an in-out bool
	instead of image_flags
