@@ -49,6 +49,9 @@ Before 1.0 big stuff
 Before 1.0 little stuff
 -----------------------
 
+ o better sharing of dae daemon: share dae /daemon need to create a libdaemon/
+   subdir and this lib must be self contained (not include anything in dae/*.h
+   daemon/*.h) (<movewent> not really worth a whole new lib dir imho)
  o separate debug info stuff
  o opgprof always merges even if we provide a profile spec that's minimal
    enough - you can't get "cpu:0"
@@ -56,6 +59,11 @@ Before 1.0 little stuff
  in pp/profile_spec.cpp, I'm unsure if it remains some other place to fix
 
    - this isn't fixed AFAICS - we only follow one level of symbolic link ?
+
+  movement: man 2 readlink : ELOOP  Too many symbolic links were encountered
+  in translating the pathname.
+  I read it as kernel iterate on symlink and didn't check in kernel code ?
+
 
  o is relative_to_absolute_path guaranteeing a trailing '/' documented ?
  o create_path API is weird
